1. Проект собран в одно целое.Код компилируется.Базы данных создаются корректно 2. Добавлено логирование в ключевые классы 3. Добавлена реализация очистки кеша 4. Откорректированы настройки Liquibase